--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'key0'
             keyPassword 'yara2891993'
-            storeFile file('D:/NTL/my apps/Daily News/keystore.jks')
+            storeFile file("$rootDir/keystore.jks")
             storePassword 'yara2891993'
         }
     }
